<resources>
    <string name="app_name">VOCALENDAR</string>
    <string name="vocalendar">VOCALENDAR</string>
    <string name="setting">Settings</string>
    <string name="about_vocalendar_app">About this application</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
  	<string name="choose_account_title">Choose account</string>
  	<string name="google_account_required">Google account is required. Add an account.</string>
  	<string name="add_account">Add account</string>
  	<string name="loading_events">Loading...</string>
  	<string name="loading_events_failed">Failed to load.</string>
  	<string name="today">Today</string>
  	<string name="from_to"> - </string>
  	<string name="to">-</string>
  	<string name="end">END</string>
	<string name="every_week_format">Every %s</string>
  	<string name="every_month_format">%s of every month</string>
  	<string name="every_year_format">%s every year</string>
	<string name="first">first\u0020</string>
	<string name="second">second\u0020</string>
	<string name="third">third\u0020</string>
	<string name="fourth">forth\u0020</string>
	<string name="nth_format">%dth\u0020</string>
	<string name="first_day">first\u0020</string>
	<string name="second_day">second\u0020</string>
	<string name="third_day">third\u0020</string>
	<string name="nth_day_format">%dth\u0020</string>
	<string name="after_weekday_string"></string>
	<string name="update">Update</string>
	<string name="change_date">Date</string>
	<string name="not_implemented">Not implemented.</string>
	<string name="open_vocalendar">Open vocalendar.jp</string>
	<string name="about_message">\
&lt;h2&gt;VOCALENDAR %s&lt;/h2&gt;
&lt;h4&gt;About VOCALENDAR for Android&lt;/h4&gt;
VOCALENDAR for Android is an application to view the information of events about VOCALOID in \
&lt;a href="http://vocalendar.jp"&gt;VOCALENDAR&lt;/a&gt;\
About VOCALENDAR, please see &lt;a href="http://vocalendar.jp/about/"&gt;here&lt;/a&gt;\
(Japanese).&lt;br/&gt;\
&lt;br/&gt;\
&lt;h4&gt;VOCALENDAR official application&lt;/h4&gt;\
This application is developed as a VOCALENDAR official application.&lt;br/&gt;\
The information of events is the one in VOCALENDAR.
You can use the information for personal use. But please refrain from commercial use.
	</string>
	<string name="about_message2">\
&lt;h4&gt;License&lt;/h4&gt;
This software exclude the software mensioned later is copyrighted by NAT(@nat0468).&lt;br/&gt;\
You may use this software free of charge, but licensor provides this software on \
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, \
including, without limitation, any warranties or conditions of FITNESS FOR A PARTICULAR PURPOSE, \
NON-INFRINGEMENT or MERCHANTABILITY. &lt;br/&gt;\
&lt;h4&gt;This software uses the followings:&lt;/h4&gt;
&lt;a href="http://code.google.com/p/google-api-java-client/"&gt;Google APIs Client Library for Java&lt;/a&gt;&lt;br&gt;\
Licensed under the Apache License Version 2.0 \
&lt;a href="http://www.apache.org/licenses/LICENSE-2.0"&gt;http://www.apache.org/licenses/LICENSE-2.0&lt;/a&gt;&lt;br&gt;
&lt;br&gt;
&lt;a href="https://code.google.com/p/google-meeting-scheduler/"&gt;google-meeting-scheduler&lt;/a&gt;に含まれる\
OAuthManager.java&lt;br&gt;
Copyright (c) 2010 Google Inc. Licensed under the Apache License Version 2.0 \
&lt;a href="http://www.apache.org/licenses/"&gt;http://www.apache.org/licenses/&lt;/a&gt;&lt;br&gt;\
&lt;br&gt;
&lt;a href="http://hascha.blogspot.jp/2013/08/android.html"&gt;android-ColorPickerPreferences&lt;/a&gt;&lt;br&gt;\
Copyright (C) 2011 Sergey Margaritov, rovo89, Daniel Nilsson, hascha.&lt;br&gt;\
Licensed under the Apache License, Version 2.0 \
&lt;a href="http://www.apache.org/licenses/LICENSE-2.0"&gt;http://www.apache.org/licenses/LICENSE-2.0&lt;/a&gt;
&lt;br&gt;
&lt;h4&gt;About illustration and trademark&lt;/h4&gt;\
Meiko, Kaito, Hatsune Miku, Kagamine Rin, Kagamine Len, and Megurine Luka that are a Crypton Future Media\'s character, are drawn to illustrations of this application \
are licensed under PIAPRO Characeter License.&lt;br&gt;\
Illustrations are copyrighted works of the illustrators. Do not use them without permission.&lt;br&gt;\
VOCALOID is a registered trademark of Yamaha Corporation.&lt;br&gt;\
&lt;h4&gt;Thanks&lt;/h4&gt;\
Great thanks to Yajiuma(@curioustander), who launched VOCALENDAR site and
adviced me about UI design.&lt;br&gt;\
And thanks to the VOCALENDAR editors, who tried this application,\
gave advices and supported me.\
	</string>
	<string name="copyright_vocalendar">(c) 2013 VOCALENDAR.</string>
	<string name="number_of_date_to_get_events">Number of dates to get</string>
	<string name="number_of_date_to_load_more_events">Number of dates to load more</string>
	<string name="google_account">Google Account</string>
	<string-array name="number_of_date_to_get_events_entries">
	    <item>1</item>
	    <item>3</item>
	    <item>5</item>
	    <item>7</item>
	    <item>10</item>
		<item>14</item>
	</string-array>
	<string-array name="number_of_date_to_get_events_entryvalues">
	    <item>1</item>
	    <item>3</item>
	    <item>5</item>
	    <item>7</item>
	    <item>10</item>
		<item>14</item>
	</string-array>
	<string name="number_of_date_to_get_events_dialog">Select number of date</string>
	<string-array name="number_of_date_to_load_more_entries">
	    <item>1</item>
	    <item>3</item>
	    <item>5</item>
	    <item>7</item>
	    <item>10</item>
		<item>14</item>
	</string-array>
		<string-array name="number_of_date_to_load_more_entryvalues">
	    <item>1</item>
	    <item>3</item>
	    <item>5</item>
	    <item>7</item>
	    <item>10</item>
		<item>14</item>
	</string-array>
	<string name="share_button">Share</string>
	<string name="import_button">Import</string>
	<string name="share_footer">from http://vocalendar.jp</string>
	<string name="all_day">All day</string>
	<string name="illustration_by">Illustration by </string>
	<string name="no_event">No Event</string>
	<string name="help">Help</string>
	<string name="loading_page">Loading Page</string>
	<string name="preview_loading_page">Preview Loading Page</string>
	<string-array name="loading_page_entries">
	    <item>Random</item>
	    <item>Hatsune Miku Wallpaper</item>
	    <item>Dot Animation</item>
	    <item>None</item>
	</string-array>
	<string-array name="loading_page_entry_values">
	    <item>LOADING_PAGE_RANDOM</item>
	    <item>LOADING_PAGE_WALLPAPER</item>
	    <item>LOADING_PAGE_DOT_ANIMATION</item>
	    <item>LOADING_PAGE_NONE</item>
	</string-array>
	<string name="no_title">(No title)</string>
	<string name="load_more">Load More</string>
	<string name="exception_report_dialog_title">Unexcepted exception occurred at last execution. Please report the developer the following exception log.</string>
	<string name="tap_to_load_more">Tap to Load More</string>
	<string name="load_more_event_without_tap">Load More Without Tap</string>
	<string name="location_plus_colon">Location: </string>
	<string name="map">map</string>
	<string name="unexpected_error">Unexpected Error</string>
	<string name="search_events">Search events</string>
	<string name="searching">Searching...</string>
	<string name="tap_to_search_more">Tap to Search More</string>
	<string name="number_of_events_to_search_more">Number of events to search more</string>
	<string name="number_of_events_to_search_more_dialog">Select number of events</string>
	<string-array name="number_of_events_to_search_more_entries">
	    <item>10</item>
	    <item>20</item>
	    <item>50</item>
	    <item>100</item>
	</string-array>
	<string-array name="number_of_events_to_search_more_entryvalues">
	    <item>10</item>
	    <item>20</item>
	    <item>50</item>
	    <item>100</item>
	</string-array>
	<string name="color_theme">Color Theme</string>
	<string-array name="color_theme_names">
	    <item>Default</item>
	    <item>Hatsune Miku</item>
	    <item>Kagamine Rin/Len</item>
	    <item>Megurine Luka</item>
	    <item>Kaito</item>
	    <item>Meiko</item>
	    <item>Kamui Gakupo</item>
	    <item>Gumi</item>
	    <item>SF-A2 Miki</item>
	    <item>Yuzuki Yukari</item>
	    <item>Kasane Teto</item>
	    <item>Custom color theme</item>
	</string-array>
	<string-array name="color_theme_entries">
	    <item>Default</item>
	    <item>Hatsune Miku</item>

	    <item>Custom color theme</item>
	</string-array>
	<string-array name="color_theme_entry_values">
	    <item>THEME_DEFAULT</item>
	    <item>THEME_MIKU</item>
   
	    <item>THEME_CUSTOM</item>	    
	</string-array>
	<string name="tag">【】</string>
	<string name="tag_live">【ライブ】</string>
	<string name="tag_club">【クラブ】</string>
	<string name="tag_event">【イベント】</string>
	<string name="tag_off_meeting">【オフ会】</string>
	<string name="tag_cd">【CD】</string>
	<string name="tag_dvd">【DVD】</string>
	<string name="tag_book">【書籍】</string>
	<string name="tag_figure">【FIG】</string>
	<string name="tag_game">【GAME】</string>
	<string name="tag_goods">【グッズ】</string>
	<string name="tag_campaign">【キャンペーン】</string>
	<string name="tag_nico_live">【ニコ生】</string>
	<string name="tag_tv">【TV】</string>
	<string name="tag_radio">【ラジオ】</string>
	<string name="tag_close_to_end">もうすぐ終了</string>
	<string name="tag_star">★</string>
    <string name="press_on_color_to_apply">Press on color to apply</string>
	<string name="select_color">Select color</string>
	<string name="custom_color_theme">Custom color theme</string>
	<string name="edit_custom_color_theme">Edit custom color theme</string>
	<string name="separator_color">Date separator color</string>
	<string name="separator_text_color">Date separator text color</string>
	<string name="background_color">Background color</string>
	<string name="tapped_background_color">Tapped background color</string>
	<string name="text_color">Text color</string>
	<string name="weekday_background_color">Weekday background color</string>
	<string name="weekday_text_color">Weekday text color</string>
	<string name="saturday_background_color">Saturday background color</string>
	<string name="saturday_text_color">Saturday text color</string>
	<string name="sunday_background_color">Sunday background color</string>
	<string name="sunday_text_color">Sunday text color</string>
	<string name="import_color_theme">Import color theme</string>
	<string name="list_divider_color">List divider color</string>
	<string-array name="import_color_theme_entries">
	    <item>Default</item>
	    <item>Hatsune Miku</item>

	</string-array>
	<string-array name="import_color_theme_entry_values">
	    <item>THEME_DEFAULT</item>
	    <item>THEME_MIKU</item>
	    
	</string-array>
	<string name="message">Message</string>
	<string name="fail_to_connect_server">Failed to connect the server.</string>
	<string name="loaded_data_will_be_shown">Loaded data will be shown.</string>
	<string name="seach_screen_instruction">Input a keyword to search input the textfield.\nOr, input 【】 button to input a tag to search.</string>
	<string name="search_start_date">Search starts</string>
	<string name="column">: </string>
	<string name="custom_color_theme_import_export_dialog_instruction">
To export the settings of custom color theme to the other devices,
copy the following code, and send it by email and so on.\n
To import the settings to a device, input(copy &amp; paste) the code, and press "import" button.
	</string>
	<string name="export_import">Export/Import</string>
	<string name="notification_time">Time to execute event notification</string>
	<string name="debug_mode">Debug Mode</string>
	<string name="debug_menu">Debug Menu</string>
	<string name="debug_menu_notification">(Debug)Notification</string>
	<string name="debug_menu_check_announcement">(Debug)Check Anncouncement</string>
	<string name="debug_menu_change_favorite_event">(Debug)Change Favorite Event</string>
	<string name="announcement_once_only">Announcement once only</string>
	<string name="announcement">Announcement</string>
</resources>