<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:appcompat="http://schemas.android.com/apk/res-auto"  >
    <item android:id="@+id/action_search" android:title="@string/search_events"
          android:icon="@drawable/search" appcompat:showAsAction="always" />
    <item android:id="@+id/action_setting" android:title="@string/setting"
          appcompat:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/help"
          appcompat:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/about_vocalendar_app"
          appcompat:showAsAction="never" />
    <item android:id="@+id/action_web_site" android:title="@string/open_vocalendar"
          appcompat:showAsAction="never" />
    <item android:id="@+id/action_announcement" android:title="@string/announcement"
          appcompat:showAsAction="never" />
	<item android:id="@+id/action_notification"
	      android:title="@string/debug_menu_notification"
          appcompat:showAsAction="never" />
	<item android:id="@+id/action_check_announcement"
	      android:title="@string/debug_menu_check_announcement"
          appcompat:showAsAction="never" />
	<item android:id="@+id/action_change_favorite_event"
	      android:title="@string/debug_menu_change_favorite_event"
          appcompat:showAsAction="never" />
</menu>
