<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference android:title="@string/number_of_date_to_get_events"
        			android:key="number_of_date_to_get_events_preference"
        			android:entries="@array/number_of_date_to_get_events_entries"
        			android:entryValues="@array/number_of_date_to_get_events_entryvalues"
        			android:dialogTitle="@string/number_of_date_to_get_events_dialog"
        			android:defaultValue="3" />
    <ListPreference android:title="@string/number_of_date_to_load_more_events"
        			android:key="number_of_date_to_load_more_events_preference"
        			android:entries="@array/number_of_date_to_load_more_entries"
        			android:entryValues="@array/number_of_date_to_load_more_entryvalues"
        			android:dialogTitle="@string/number_of_date_to_get_events_dialog"
        			android:defaultValue="3" />    
    <CheckBoxPreference android:title="@string/load_more_event_without_tap" 
        			android:key="load_more_event_without_tap"
        			android:defaultValue="false" />
    <ListPreference android:title="@string/number_of_events_to_search_more"
        			android:key="number_of_events_to_search_more_preference"
        			android:entries="@array/number_of_events_to_search_more_entries"
        			android:entryValues="@array/number_of_events_to_search_more_entryvalues"
        			android:dialogTitle="@string/number_of_events_to_search_more_dialog"
        			android:defaultValue="20" />            			
    <ListPreference android:title="@string/loading_page"
        			android:key="loading_page_preference"
        			android:entries="@array/loading_page_entries"
        			android:entryValues="@array/loading_page_entry_values"
        			android:dialogTitle="@string/loading_page"
        			android:defaultValue="LOADING_PAGE_RANDOM" />    
    <Preference android:title="@string/preview_loading_page"
        		android:key="preview_loading_page">
        <intent android:action="android.intent.action.VIEW"
            android:targetClass="jp.vocalendar.activity.PreviewLoadingPageActivity"
            android:targetPackage="jp.vocalendar" />
    </Preference>
    <ListPreference android:title="@string/color_theme"
        			android:key="color_theme_preference"
        			android:entries="@array/color_theme_entries"
        			android:entryValues="@array/color_theme_entry_values"
        			android:dialogTitle="@string/color_theme"
        			android:defaultValue="THEME_DEFAULT" />
    <Preference android:title="@string/edit_custom_color_theme"
        		android:key="custom_color_theme">
    </Preference>
    <ListPreference android:title="@string/google_account"
        			android:key="selected_account_preference" />
    <ListPreference android:title="@string/notification_time"
        			android:key="notification_time_pref"
        			android:entries="@array/notification_time_entries"
        			android:entryValues="@array/notification_time_entry_values"
        			android:dialogTitle="@string/notification_time"
        			android:defaultValue="8" />
    <CheckBoxPreference android:title="@string/announcement_once_only" 
        			android:key="announcement_once_only"
        			android:defaultValue="false" />
	<CheckBoxPreference xmlns:android="http://schemas.android.com/apk/res/android"  
						android:title="@string/debug_mode" 
						android:key="debug_mode"
    					android:defaultValue="false" />
	<CheckBoxPreference xmlns:android="http://schemas.android.com/apk/res/android"  
						android:title="@string/debug_menu" 
						android:key="debug_menu"
    					android:defaultValue="false" />	
    <Preference android:title="@string/back"
        		android:key="back">
    </Preference>    
</PreferenceScreen>