<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Vocalendar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e0e0e0"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/VocalendarContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="0.0"
        android:orientation="horizontal"
        android:padding="0dp" >

        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1.6"
            android:adjustViewBounds="true"
            android:contentDescription="@string/vocalendar"
            android:scaleType="fitStart"
            android:src="@drawable/vocalendar_title" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:adjustViewBounds="true"
            android:src="@drawable/search" />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="#f5f5f5"
        android:divider="#cccccc"
        android:dividerHeight="1sp" >

    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="fill_horizontal"
        android:weightSum="4" >

        <Button
            android:id="@+id/change_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_date" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting" />

        <Button
            android:id="@+id/help_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help" />
        
        <Button
            android:id="@+id/update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

    </LinearLayout>

</LinearLayout>