<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Vocalendar" >

    <LinearLayout
        style="@style/VocalendarContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="0.0"
	    android:background="#e0e0e0"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:adjustViewBounds="true"
            android:contentDescription="@string/vocalendar"
            android:scaleType="fitStart"
            android:src="@drawable/vocalendar_title" />

        <TextView
            android:id="@+id/spaceTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:text="" />

    </LinearLayout>


	<android.support.v4.view.ViewPager
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/swipable_event_description_pager"
        android:layout_weight="1.0"	    
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	</android.support.v4.view.ViewPager>
	
	<LinearLayout
    	android:id="@+id/event_description_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:gravity="fill">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="&lt;" />
        <Button
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/share_button" />
        <Button
            android:id="@+id/import_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/import_button" />
        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="&gt;" />
    </LinearLayout>	
</LinearLayout>